# sensirion-sht3x

./: .clang-format  CMakeLists.txt  README.md  run_test.sh
src/: CMakeLists.txt  sht3x.c  sht3x.h  sht3x_defs.h  sht3x_private.h
src/test/: CMakeLists.txt  main.cpp  sht3x.cpp  sht3x_no_setup.cpp
src/test/mock/: CMakeLists.txt  mock_cfg_functions.cpp  mock_cfg_functions.h
